# auto-research-pipeline

./: .gitignore  CLAUDE.md  README.md  one_click.sh  pyproject.toml
.claude/commands/: research-office-hours.md  research-plan-eng.md  research-retro.md  research-review-metrics.md
.claude/skills/auto-research-pipeline/: SKILL.md
.github/workflows/: ci.yml  gpu-research.yml
deploy/: Dockerfile.gpu-runner  vast.env.example
docs/: RESEARCH_GOVERNANCE.md
experiments/: README.md  _template.governance.yaml.example  example.yaml  linear_regression.yaml
scripts/: claude_code_bootstrap.sh  deploy_vast_5080.sh  mock_train.py  setup_github_runner.sh  train_linear_regression.py
src/auto_research/: __init__.py  cli.py  config.py  experiments.py  feedback.py  pipeline.py  preflight.py  retro.py
tests/: test_feedback.py  test_preflight.py
